--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 contourpy==1.3.3
 cycler==0.12.1
+dask[distributed]==2024.11.0
+dask-jobqueue==0.8.5
 fonttools==4.59.2
 joblib==1.5.2
 kiwisolver==1.4.9
