--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 contourpy==1.3.3
 cycler==0.12.1
-dask[distributed]==2024.11.0
+dask[distributed]==2024.10.0
 dask-jobqueue==0.8.5
 fonttools==4.59.2
 joblib==1.5.2
@@ -16,3 +16,4 @@ scikit-learn==1.7.1
 scipy==1.16.1
 six==1.17.0
 threadpoolctl==3.6.0
+setuptools==75.6.0
